--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <button class="menu-toggle">&#9776;</button>
       <div class="dropdown-menu">
         <a href="#kontak">Kontak</a>
-        <a href="https://maps.app.goo.gl/xyz123" target="_blank">Lokasi</a>
+        <a href="https://maps.app.goo.gl/B8oGTEZkuaCnnV7S8" target="_blank">Lokasi</a>
         <a href="#about">Tentang Kami</a>
       </div>
     </div>
