--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
       <p class="stars">★★★★★</p>
       <a href="https://wa.me/6285600279887?text=Halo%20saya%20ingin%20memesan%20Minuman%20Segar" class="order-btn">Pesan Sekarang</a>
     </div>
+
+    <div class="product-card animate delay-6">
+      <img src="image5.png" alt="Es Teh Jumbo" />
+      <h2>Es Teh Jumbo</h2>
+      <p class="desc"> ES TEH JUMBO SEGARNYA GAK ADA LAWAN! 💥Minum sekali, nagih berkali-kali. Ukuran gede, rasa juara!</p>
+      <p class="price">Rp3.000</p>
+      <p class="stars">★★★★★</p>
+      <a href="https://wa.me/6285600279887?text=Halo%20saya%20ingin%20memesan%20Es Teh%20Jumbo" class="order-btn">Pesan Sekarang</a>
+    </div>
   </main>
   <section id="about" class="about">
   <h2>Tentang Kami</h2>
